--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "gh-pages": "^4.0.0",
     "mongoose": "^6.4.0",
+    "nodemon": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
