--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "express": "^4.18.1",
     "gh-pages": "^4.0.0",
     "mongoose": "^6.4.0",
-    "nodemon": "^2.0.18",
+    "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
